# saleor-odoo-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: decisions.md  phase-3-integration-research.md  setup-odoo.md  setup-odoo.ru.md
docs/adr/: 0001-python-middleware.md  0002-no-saleor-app-sdk.md  0003-odoo-custom-module.md  0004-single-channel-mvp.md  0005-order-flow.md  0006-conflict-resolution.md  0007-sku-as-natural-key.md  0008-failed-sync-handling.md  0009-refunds-deferred.md  0010-stock-consistency.md  0011-secret-in-query-for-odoo-webhook.md  0012-single-product-type-mvp.md  0013-bulk-seed-as-cli.md  0014-stock-out-of-scope-3-2.md  0015-single-warehouse-mvp.md  0016-safety-buffer-policy.md  0017-stock-quant-trigger.md  0018-reconcile-cron.md  0019-order-status-mapping.md  0020-skip-guard-mechanism.md  0021-single-fulfillment-mvp.md  0022-notification-policy.md  README.md  (+5 more)
middleware/: .dockerignore  Dockerfile  README.md  pyproject.toml
middleware/src/saleor_bridge/: __init__.py  config.py  locks.py  main.py
middleware/src/saleor_bridge/adapters/odoo/: attribute.py  binding.py  category.py  partner.py  product.py  sale_order.py  stock.py  stock_picking.py  tax.py  variant.py
middleware/src/saleor_bridge/adapters/saleor/: attribute_mutations.py  catalog_admin.py  category_mutations.py  common.py  customer_mapper.py  factory.py  order_mapper.py  order_mutations.py  payload_models.py  product_mutations.py  product_type_mutations.py  slug.py  stock_mutations.py  variant_mutations.py
middleware/src/saleor_bridge/api/: health.py  manifest.py  odoo_events.py  register.py  webhooks.py
middleware/src/saleor_bridge/apl/: base.py  redis_apl.py
middleware/src/saleor_bridge/cli/: __init__.py  bulk_seed.py
middleware/src/saleor_bridge/domain/: __init__.py  address.py  category.py  customer.py  enums.py  events.py  order.py  order_status.py  product.py  stock.py  variants.py
middleware/src/saleor_bridge/observability/: email.py  slack.py
middleware/src/saleor_bridge/odoo/: client.py
middleware/src/saleor_bridge/queue/: arq_worker.py  idempotency.py  pool.py  redis_queue.py  tasks.py
middleware/src/saleor_bridge/saleor/: client.py  manifest_schema.py  signature.py
middleware/src/saleor_bridge/usecases/: bulk_seed.py  bulk_seed_stocks.py  bulk_seed_variants.py  reconcile_stocks.py  result.py  sync_attribute_to_saleor.py  sync_canonical_status_to_saleor.py  sync_category_to_saleor.py  sync_customer.py  sync_order.py  sync_order_status_to_saleor.py  sync_product_to_saleor.py  sync_stock_to_saleor.py  sync_template_variants_to_saleor.py  sync_variant_to_saleor.py
middleware/tests/: conftest.py  saleor_order_fakes.py  stock_fakes.py  test_address_split.py  test_attribute_mapping.py  test_canonical_status_sync.py  test_category_mapping.py  test_customer_mapping.py  test_e2e_attribute_sync.py  test_e2e_category_sync.py  test_e2e_order_confirm.py  test_e2e_order_fulfill.py  test_e2e_stock_sync.py  test_e2e_variant_generation.py  test_fulfillment_line_mapping.py  test_health.py  test_idempotency.py  test_idempotency_outbound.py  test_locks.py  test_manifest.py  test_migration_idempotent.py  test_negative_clamp.py  test_order_financials.py  test_order_mapping.py  test_order_state_mapping.py  test_product_mapping.py  test_ptav_resolution.py  test_reconcile_diff.py  test_register_auth.py  test_safety_buffer.py  test_secret_validation.py  test_signature.py  test_skip_guard.py  test_slug.py  test_status_idempotency.py  test_stock_aggregation.py  test_stock_mapping.py  test_task_guard.py  test_topological_sort.py  test_tracking_propagation.py  (+2 more)
scripts/: README.md  backup.sh  entrypoint.sh  generate_api_key.py  install_bridge_app.py  odoo-shell.sh  odoo_setup.py  requirements.txt  restore.sh  smoke_test.py  verify_bindings.py  verify_smoke.py
(+40 files in other folders)
