[project]
name = "saleor-bridge"
version = "0.1.0"
description = "Saleor <-> Odoo sync middleware: products, variants, stock, orders, customers"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Behro'z (BekkiBay)" }]
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "joserfc>=1.0",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "gql[httpx]>=3.5",
    "arq>=0.26",
    "tenacity>=9.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saleor_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # let formatter handle line length

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
