[project]
name = "saleor-bridge"
version = "0.2.0"
description = "Saleor <-> Odoo sync middleware: products, variants, stock, orders, customers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Behro'z (BekkiBay)" }]
keywords = ["saleor", "odoo", "ecommerce", "erp", "sync", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "joserfc>=1.0",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "gql[httpx]>=3.5",
    "arq>=0.26",
    "tenacity>=9.0",
]

[project.urls]
Homepage = "https://github.com/BekkiBay/saleor-odoo-bridge"
Issues = "https://github.com/BekkiBay/saleor-odoo-bridge/issues"

[project.optional-dependencies]
# The bulk-seed / reconcile CLI. Not needed to run the webhook sync path.
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "saleor-bridge[cli]",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
saleor-bridge = "saleor_bridge.cli.bulk_seed:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saleor_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "BLE", "SIM", "RUF"]
ignore = [
    "E501",  # let the formatter handle line length
    "B008",  # FastAPI's `Depends()` in argument defaults is the documented idiom
]

[tool.ruff.lint.per-file-ignores]
# The Cyrillic→Latin transliteration table is data, not prose.
"src/saleor_bridge/adapters/saleor/slug.py" = ["RUF001"]
# Cyrillic strings here are test inputs that exercise transliteration.
"tests/test_slug.py" = ["RUF001"]
"tests/test_category_mapping.py" = ["RUF001"]
"tests/test_e2e_category_sync.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# Full `strict = true` is the goal, not yet the state of this codebase.
# See CONTRIBUTING.md — tightening it module by module is a welcome PR.
